feat: register new user action

--- a/squizzy/lib/squizzy_web/templates/user/new.html.eex
+++ b/squizzy/lib/squizzy_web/templates/user/new.html.eex
@@ -15,5 +15,17 @@
     <%= text_input f, :username, placeholder: "Username" %>
     <%= error_tag f, :username %>
   </div>
+  <div>
+    <%= inputs_for f, :credential, fn cf -> %>
+      <div>
+      <%= text_input cf, :email, placeholder: "Email" %>
+      <%= error_tag cf, :email %>
+    </div>
+      <div>
+        <%= password_input cf, :password, placeholder: "Password" %>
+        <%= error_tag cf, :password %>
+      </div>
+    <% end %>
+  </div>
   <%= submit "Create User" %>
 <% end %>
