--- a/squizzy/lib/squizzy_web/templates/layout/app.html.eex
+++ b/squizzy/lib/squizzy_web/templates/layout/app.html.eex
@@ -16,11 +16,13 @@
               <li><%= @current_user.username %></li>
               <li><%= link "Log out", to: Routes.session_path(@conn, :delete, @current_user), method: "delete" %></li>
             <% else %>
-              <li><% link "Register", to: Routes.user_path(@conn, :new) %></li>
+              <li>test</li>
+              <li><%= link "Login", to: Routes.session_path(@conn, :new) %></li>
+              <li><%= link "Register", to: Routes.user_path(@conn, :new) %></li>
             <% end %>
           </ul>
         </nav>
-        <a href="http://phoenixframework.org/" class="phx-logo">
+        <a href="/" class="phx-logo">
           <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
         </a>
       </section>
