--- a/squizzy/lib/squizzy_web/templates/page/index.html.eex
+++ b/squizzy/lib/squizzy_web/templates/page/index.html.eex
@@ -1,20 +1,11 @@
-<section class="phx-hero">
-  <h1><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h1>
-  <p>A productive web framework that<br/>does not compromise speed and maintainability.</p>
-</section>
-
 <section class="row">
   <article class="column">
-    <h2>Resources</h2>
     <ul>
       <li>
-        <a href="https://hexdocs.pm/phoenix/overview.html">Guides &amp; Docs</a>
+        <%= link "Users", to: Routes.user_path(@conn, :index) %>
       </li>
       <li>
-        <a href="https://github.com/phoenixframework/phoenix">Source</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix/blob/v1.4/CHANGELOG.md">v1.4 Changelog</a>
+        <%= link "Videos", to: Routes.video_path(@conn, :index) %>
       </li>
     </ul>
   </article>
